alteracoes #7 - basic auth
